--- a/CinemaBook/Scence/Login/view/LoginViewController.xib
+++ b/CinemaBook/Scence/Login/view/LoginViewController.xib
@@ -119,11 +119,11 @@
                             <color key="textColor" name="AccentColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-menu-scan" translatesAutoresizingMaskIntoConstraints="NO" id="Rcb-H7-eyi">
-                            <rect key="frame" x="187" y="451" width="40" height="40"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-login" translatesAutoresizingMaskIntoConstraints="NO" id="Rcb-H7-eyi">
+                            <rect key="frame" x="182" y="451" width="50" height="50"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="40" id="MU0-Z5-lfa"/>
-                                <constraint firstAttribute="height" constant="40" id="nHU-Cb-Uli"/>
+                                <constraint firstAttribute="width" constant="50" id="MU0-Z5-lfa"/>
+                                <constraint firstAttribute="height" constant="50" id="nHU-Cb-Uli"/>
                             </constraints>
                         </imageView>
                     </subviews>
@@ -153,7 +153,7 @@
         </view>
     </objects>
     <resources>
-        <image name="icon-menu-scan" width="19" height="16"/>
+        <image name="icon-login" width="24" height="24"/>
         <image name="tech-logo_cl_#1" width="222.5" height="50"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
