--- a/CinemaBook/Scence/Booking/BookingChair/view/BookingChairViewController.xib
+++ b/CinemaBook/Scence/Booking/BookingChair/view/BookingChairViewController.xib
@@ -10,9 +10,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BookingChairViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
-                <outlet property="scroll_view_zoom" destination="6Jj-sZ-fMP" id="uMT-yC-ksi"/>
+                <outlet property="scroll_view_zoom" destination="kdR-wv-YPR" id="bHw-BX-4dB"/>
+                <outlet property="tableView" destination="Kjd-lg-jSe" id="gHu-be-ABp"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outlet property="view_collection" destination="1Tj-LD-0dZ" id="6rL-cB-FdM"/>
+                <outlet property="view_of_collectionview" destination="Ynr-MH-DBd" id="CzL-0d-CeU"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -155,41 +156,34 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ynr-MH-DBd">
                             <rect key="frame" x="0.0" y="50" width="414" height="688"/>
                             <subviews>
-                                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="-1" maximumZoomScale="10" translatesAutoresizingMaskIntoConstraints="NO" id="6Jj-sZ-fMP">
+                                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="-1" maximumZoomScale="10" translatesAutoresizingMaskIntoConstraints="NO" id="kdR-wv-YPR">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="688"/>
                                     <subviews>
-                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="1Tj-LD-0dZ">
-                                            <rect key="frame" x="0.0" y="0.0" width="800" height="688"/>
-                                            <color key="backgroundColor" red="0.16078431372549018" green="0.16078431372549018" blue="0.17254901960784313" alpha="1" colorSpace="calibratedRGB"/>
+                                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Kjd-lg-jSe">
+                                            <rect key="frame" x="-193" y="-56" width="800" height="800"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="800" id="SgC-2T-ynR"/>
+                                                <constraint firstAttribute="width" constant="800" id="2HG-i9-K4P"/>
+                                                <constraint firstAttribute="height" constant="800" id="8nX-KM-Xs3"/>
                                             </constraints>
-                                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="eUJ-WD-NNc">
-                                                <size key="itemSize" width="50" height="50"/>
-                                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                            </collectionViewFlowLayout>
-                                        </collectionView>
+                                        </tableView>
                                     </subviews>
-                                    <color key="backgroundColor" red="0.16078431372549018" green="0.16078431372549018" blue="0.17254901960784313" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
-                                        <constraint firstItem="1Tj-LD-0dZ" firstAttribute="top" secondItem="2EF-Xs-j09" secondAttribute="top" id="2QY-fJ-2XY"/>
-                                        <constraint firstItem="2EF-Xs-j09" firstAttribute="leading" secondItem="1Tj-LD-0dZ" secondAttribute="leading" id="7XI-YQ-DXo"/>
-                                        <constraint firstItem="1Tj-LD-0dZ" firstAttribute="trailing" secondItem="2EF-Xs-j09" secondAttribute="trailing" id="hBJ-Gv-fdF"/>
-                                        <constraint firstItem="1Tj-LD-0dZ" firstAttribute="bottom" secondItem="2EF-Xs-j09" secondAttribute="bottom" id="q2E-jV-Mow"/>
-                                        <constraint firstItem="1Tj-LD-0dZ" firstAttribute="height" secondItem="RRY-Jz-gJA" secondAttribute="height" id="xZx-dU-KPp"/>
+                                        <constraint firstItem="Kjd-lg-jSe" firstAttribute="centerX" secondItem="PUK-IX-Q9E" secondAttribute="centerX" id="5FR-yJ-9Pt"/>
+                                        <constraint firstItem="Kjd-lg-jSe" firstAttribute="centerX" secondItem="kdR-wv-YPR" secondAttribute="centerX" id="9RI-Fr-RAE"/>
+                                        <constraint firstItem="Kjd-lg-jSe" firstAttribute="centerY" secondItem="kdR-wv-YPR" secondAttribute="centerY" id="Vbx-EB-K41"/>
+                                        <constraint firstItem="Kjd-lg-jSe" firstAttribute="centerY" secondItem="PUK-IX-Q9E" secondAttribute="centerY" id="bbE-vS-Dml"/>
                                     </constraints>
-                                    <viewLayoutGuide key="contentLayoutGuide" id="2EF-Xs-j09"/>
-                                    <viewLayoutGuide key="frameLayoutGuide" id="RRY-Jz-gJA"/>
+                                    <viewLayoutGuide key="contentLayoutGuide" id="PUK-IX-Q9E"/>
+                                    <viewLayoutGuide key="frameLayoutGuide" id="6ap-WM-ZDC"/>
                                 </scrollView>
                             </subviews>
                             <color key="backgroundColor" red="0.16078431372549018" green="0.16078431372549018" blue="0.17254901960784313" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstItem="6Jj-sZ-fMP" firstAttribute="leading" secondItem="Ynr-MH-DBd" secondAttribute="leading" id="3EG-Uy-l1F"/>
-                                <constraint firstAttribute="bottom" secondItem="6Jj-sZ-fMP" secondAttribute="bottom" id="cAg-Z3-7rj"/>
-                                <constraint firstAttribute="trailing" secondItem="6Jj-sZ-fMP" secondAttribute="trailing" id="eoG-a8-3KM"/>
-                                <constraint firstItem="6Jj-sZ-fMP" firstAttribute="top" secondItem="Ynr-MH-DBd" secondAttribute="top" id="vVe-t2-BgD"/>
+                                <constraint firstItem="kdR-wv-YPR" firstAttribute="leading" secondItem="Ynr-MH-DBd" secondAttribute="leading" id="6r8-FK-P6D"/>
+                                <constraint firstAttribute="bottom" secondItem="kdR-wv-YPR" secondAttribute="bottom" id="ASz-4y-11p"/>
+                                <constraint firstAttribute="trailing" secondItem="kdR-wv-YPR" secondAttribute="trailing" id="GH0-rq-YTz"/>
+                                <constraint firstItem="kdR-wv-YPR" firstAttribute="top" secondItem="Ynr-MH-DBd" secondAttribute="top" id="O92-Z5-k7f"/>
                             </constraints>
                         </view>
                     </subviews>
