--- a/CinemaBook/Scence/Home/view/HomeViewController.xib
+++ b/CinemaBook/Scence/Home/view/HomeViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
+                <outlet property="collection_view" destination="a4B-XN-W0Z" id="C9b-YB-uDy"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,7 +21,25 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vec-iT-mKk">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <subviews>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="a4B-XN-W0Z">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2wG-r6-BED">
+                                <size key="itemSize" width="128" height="128"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
+                    </subviews>
                     <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstItem="a4B-XN-W0Z" firstAttribute="leading" secondItem="vec-iT-mKk" secondAttribute="leading" id="4Ie-HP-rJb"/>
+                        <constraint firstAttribute="trailing" secondItem="a4B-XN-W0Z" secondAttribute="trailing" id="4d3-l1-XVh"/>
+                        <constraint firstAttribute="bottom" secondItem="a4B-XN-W0Z" secondAttribute="bottom" id="IyY-VD-maf"/>
+                        <constraint firstItem="a4B-XN-W0Z" firstAttribute="top" secondItem="vec-iT-mKk" secondAttribute="top" id="R7N-8I-FF2"/>
+                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
