--- a/CinemaBook/Scence/Booking/BookingChair/view/cell/itemCollectionCell/ItemChairCollectionViewCell.xib
+++ b/CinemaBook/Scence/Booking/BookingChair/view/cell/itemCollectionCell/ItemChairCollectionViewCell.xib
@@ -17,24 +17,37 @@
                 <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A11" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fQV-HL-GfL">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A11" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fQV-HL-GfL">
                         <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-sub-button" translatesAutoresizingMaskIntoConstraints="NO" id="M02-2b-sOQ">
+                        <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                    </imageView>
                 </subviews>
             </view>
-            <color key="backgroundColor" red="0.87843137250000003" green="0.078431372550000003" blue="0.27450980390000002" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="M02-2b-sOQ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="8AX-bF-WU0"/>
+                <constraint firstAttribute="bottom" secondItem="M02-2b-sOQ" secondAttribute="bottom" id="Ap3-X7-oo4"/>
                 <constraint firstAttribute="trailing" secondItem="fQV-HL-GfL" secondAttribute="trailing" id="D4y-Bc-rdb"/>
                 <constraint firstItem="fQV-HL-GfL" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Dme-OG-OcQ"/>
                 <constraint firstItem="fQV-HL-GfL" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="QSK-4F-yrb"/>
                 <constraint firstAttribute="bottom" secondItem="fQV-HL-GfL" secondAttribute="bottom" id="RKL-Tz-cwB"/>
+                <constraint firstAttribute="trailing" secondItem="M02-2b-sOQ" secondAttribute="trailing" id="fZB-Vo-E9Q"/>
+                <constraint firstItem="M02-2b-sOQ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="vTZ-Bd-5Pn"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="30" height="35"/>
+            <connections>
+                <outlet property="lbl_numberChair" destination="fQV-HL-GfL" id="Xae-B7-hEj"/>
+            </connections>
             <point key="canvasLocation" x="139.13043478260872" y="114.50892857142857"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="icon-sub-button" width="20" height="20"/>
+    </resources>
 </document>
