--- a/CinemaBook/Scence/Booking/view/BookingTicketViewController.xib
+++ b/CinemaBook/Scence/Booking/view/BookingTicketViewController.xib
@@ -23,121 +23,11 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3B0-gr-GtE">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0hq-Eu-RRE">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="70"/>
-                            <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FAv-Ko-1ms">
-                                    <rect key="frame" x="20" y="10" width="374" height="50"/>
-                                    <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="vGF-gk-gDz">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
-                                            <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QQV-qW-K83">
-                                                    <rect key="frame" x="0.0" y="0.0" width="186.5" height="50"/>
-                                                    <color key="backgroundColor" red="0.31372549019607843" green="0.30196078431372547" blue="0.30588235294117649" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
-                                                    <state key="normal" title="Vé theo phim">
-                                                        <color key="titleColor" red="0.96078431372549022" green="0.96470588235294119" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
-                                                    </state>
-                                                    <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                            <real key="value" value="10"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                                            <real key="value" value="1"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                    </userDefinedRuntimeAttributes>
-                                                </button>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y6S-QA-eeg">
-                                                    <rect key="frame" x="187.5" y="0.0" width="186.5" height="50"/>
-                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <state key="normal" title="Vé theo rạp">
-                                                        <color key="titleColor" red="0.792156862745098" green="0.79607843137254897" blue="0.80784313725490198" alpha="1" colorSpace="calibratedRGB"/>
-                                                    </state>
-                                                </button>
-                                            </subviews>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </stackView>
-                                    </subviews>
-                                    <color key="backgroundColor" red="0.13725490196078433" green="0.14901960784313725" blue="0.16862745098039217" alpha="1" colorSpace="calibratedRGB"/>
-                                    <constraints>
-                                        <constraint firstItem="vGF-gk-gDz" firstAttribute="leading" secondItem="FAv-Ko-1ms" secondAttribute="leading" id="6J9-4W-Trq"/>
-                                        <constraint firstItem="vGF-gk-gDz" firstAttribute="top" secondItem="FAv-Ko-1ms" secondAttribute="top" id="eFJ-pX-V85"/>
-                                        <constraint firstAttribute="trailing" secondItem="vGF-gk-gDz" secondAttribute="trailing" id="rFx-VO-elY"/>
-                                        <constraint firstAttribute="bottom" secondItem="vGF-gk-gDz" secondAttribute="bottom" id="uwh-K5-KBQ"/>
-                                    </constraints>
-                                    <userDefinedRuntimeAttributes>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                            <real key="value" value="10"/>
-                                        </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                            <real key="value" value="1"/>
-                                        </userDefinedRuntimeAttribute>
-                                    </userDefinedRuntimeAttributes>
-                                </view>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="70" id="7Qn-A6-2Pt"/>
-                                <constraint firstItem="FAv-Ko-1ms" firstAttribute="leading" secondItem="0hq-Eu-RRE" secondAttribute="leading" constant="20" id="C2G-JB-rNk"/>
-                                <constraint firstAttribute="bottom" secondItem="FAv-Ko-1ms" secondAttribute="bottom" constant="10" id="chX-cb-7er"/>
-                                <constraint firstAttribute="trailing" secondItem="FAv-Ko-1ms" secondAttribute="trailing" constant="20" id="thT-2c-8Uz"/>
-                                <constraint firstItem="FAv-Ko-1ms" firstAttribute="top" secondItem="0hq-Eu-RRE" secondAttribute="top" constant="10" id="uco-zc-dzw"/>
-                            </constraints>
-                        </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OPZ-kx-Lma">
-                            <rect key="frame" x="0.0" y="71" width="414" height="50"/>
-                            <subviews>
-                                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3X6-31-HDl">
-                                    <rect key="frame" x="20" y="5" width="374" height="40"/>
-                                    <subviews>
-                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3Ds-Xe-fQU">
-                                            <rect key="frame" x="30" y="0.0" width="344" height="40"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits"/>
-                                        </textField>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-search-1" translatesAutoresizingMaskIntoConstraints="NO" id="t0t-Uf-2vO">
-                                            <rect key="frame" x="5" y="9" width="22" height="22"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="22" id="5Nu-lO-vKb"/>
-                                                <constraint firstAttribute="width" constant="22" id="Rdo-ZB-cjd"/>
-                                            </constraints>
-                                        </imageView>
-                                    </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <constraints>
-                                        <constraint firstItem="t0t-Uf-2vO" firstAttribute="leading" secondItem="3X6-31-HDl" secondAttribute="leading" constant="5" id="M2H-eD-M5E"/>
-                                        <constraint firstItem="3Ds-Xe-fQU" firstAttribute="top" secondItem="3X6-31-HDl" secondAttribute="top" id="Myl-PI-L8b"/>
-                                        <constraint firstItem="3Ds-Xe-fQU" firstAttribute="leading" secondItem="3X6-31-HDl" secondAttribute="leading" constant="30" id="Quy-EL-fzT"/>
-                                        <constraint firstAttribute="bottom" secondItem="3Ds-Xe-fQU" secondAttribute="bottom" id="T6o-at-IJq"/>
-                                        <constraint firstAttribute="trailing" secondItem="3Ds-Xe-fQU" secondAttribute="trailing" id="eoh-W5-cDT"/>
-                                        <constraint firstItem="t0t-Uf-2vO" firstAttribute="centerY" secondItem="3X6-31-HDl" secondAttribute="centerY" id="qbo-d8-2aP"/>
-                                    </constraints>
-                                    <userDefinedRuntimeAttributes>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                            <real key="value" value="20"/>
-                                        </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                            <real key="value" value="1"/>
-                                        </userDefinedRuntimeAttribute>
-                                    </userDefinedRuntimeAttributes>
-                                </view>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstAttribute="trailing" secondItem="3X6-31-HDl" secondAttribute="trailing" constant="20" id="4g6-zw-B2i"/>
-                                <constraint firstItem="3X6-31-HDl" firstAttribute="leading" secondItem="OPZ-kx-Lma" secondAttribute="leading" constant="20" id="Qma-0t-5Eh"/>
-                                <constraint firstAttribute="height" constant="50" id="Y8t-jL-b98"/>
-                                <constraint firstAttribute="bottom" secondItem="3X6-31-HDl" secondAttribute="bottom" constant="5" id="ZoS-Ux-alI"/>
-                                <constraint firstItem="3X6-31-HDl" firstAttribute="top" secondItem="OPZ-kx-Lma" secondAttribute="top" constant="5" id="n45-rh-wa5"/>
-                            </constraints>
-                        </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sFi-Vn-ZAB">
-                            <rect key="frame" x="0.0" y="122" width="414" height="696"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
                             <subviews>
                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="DNe-we-lz8">
-                                    <rect key="frame" x="0.0" y="10" width="414" height="686"/>
+                                    <rect key="frame" x="0.0" y="10" width="414" height="808"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yFY-O5-o5z">
                                         <size key="itemSize" width="50" height="50"/>
@@ -158,14 +48,8 @@
                     </subviews>
                     <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstItem="OPZ-kx-Lma" firstAttribute="leading" secondItem="3B0-gr-GtE" secondAttribute="leading" id="8Ol-Hs-GD6"/>
-                        <constraint firstItem="0hq-Eu-RRE" firstAttribute="leading" secondItem="3B0-gr-GtE" secondAttribute="leading" id="Az8-Td-g98"/>
-                        <constraint firstItem="OPZ-kx-Lma" firstAttribute="top" secondItem="0hq-Eu-RRE" secondAttribute="bottom" constant="1" id="BE9-aO-SRX"/>
-                        <constraint firstItem="0hq-Eu-RRE" firstAttribute="top" secondItem="3B0-gr-GtE" secondAttribute="top" id="Cds-Xc-mOd"/>
-                        <constraint firstAttribute="trailing" secondItem="OPZ-kx-Lma" secondAttribute="trailing" id="Ib7-ih-16Z"/>
-                        <constraint firstItem="sFi-Vn-ZAB" firstAttribute="top" secondItem="OPZ-kx-Lma" secondAttribute="bottom" constant="1" id="JP6-iK-0sW"/>
                         <constraint firstAttribute="bottom" secondItem="sFi-Vn-ZAB" secondAttribute="bottom" id="TdU-n2-Gxu"/>
-                        <constraint firstAttribute="trailing" secondItem="0hq-Eu-RRE" secondAttribute="trailing" id="jHh-Hh-ea8"/>
+                        <constraint firstItem="sFi-Vn-ZAB" firstAttribute="top" secondItem="3B0-gr-GtE" secondAttribute="top" id="hC7-as-j5u"/>
                         <constraint firstAttribute="trailing" secondItem="sFi-Vn-ZAB" secondAttribute="trailing" id="t5U-sh-cUm"/>
                         <constraint firstItem="sFi-Vn-ZAB" firstAttribute="leading" secondItem="3B0-gr-GtE" secondAttribute="leading" id="voF-SX-vQH"/>
                     </constraints>
@@ -182,7 +66,4 @@
             <point key="canvasLocation" x="34.782608695652179" y="34.821428571428569"/>
         </view>
     </objects>
-    <resources>
-        <image name="icon-search-1" width="17" height="17"/>
-    </resources>
 </document>
